--- a/index.html
+++ b/index.html
@@ -1,44 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <title>PORTAL ALELO - PME</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" media="all">
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen">
-  </head>
-  <body>
-    <script src="https://unpkg.com/blip-chat-widget" type="text/javascript"></script>
-    <script src="https://npmcdn.com/lime-js" type="text/javascript"></script>
-    <script>
-        (function () {
-            window.onload = function () {
-                var builder = new BlipChat();
-              builder
-              .withAppKey('YWxlbG9kZXY6MzY5NGFhZDAtNjE4OS00YzY2LWFhOTMtYjgxY2Y2MTFiNDIz')
-            .withButton({"color":"#000000","icon":""})
-            .withCustomCommonUrl('https://alelo-a2021c1.chat.blip.ai/')
-                // .withAuth({
-                //    authType: BlipChat.DEV_AUTH,
-                //    userIdentity: '10159582630', //cpf
-                //    userPassword: 'passwrd',
-                // })
-                .withCustomMessageMetadata({
-                    channel: "PME",
-                    cnpj: "67837138000110",
-                    contracts: "['123456', '234567', '345678', '456789', '567890']",
-                    profile: "['Financeiro', 'Decisão', 'Operação']",
-                    cpf: "10159582602",
-                })
-               .withAccount({
-                    fullName: "Thiago PME",
-                    email: "thiagomessias@gmail.com",
-                    phoneNumber: "+5537998315250",
-                    city: "Itauna"
-                })
-                builder.build();
-            }
-        })();
-    </script>
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>PORTAL ALELO - PME</title>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
+    media="all">
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen">
+</head>
+
+<body>
+  <div class="center-screen">
+    <h1><a href="https://thadeutake.github.io/dev/pme/">Alelo Dev PME</a></h1>
+    <h1><a href="https://thadeutake.github.io/dev/corp/">Alelo Dev CORP</a></h1>
+  </div>
+</body>
+
 </html>
