fix: centralizando div

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
   <div class="center-screen">
     <h1><a href="https://thadeutake.github.io/dev/pme/">Alelo Dev PME</a></h1>
+  </div>
+  <div>
     <h1><a href="https://thadeutake.github.io/dev/corp/">Alelo Dev CORP</a></h1>
   </div>
 </body>
