--- a/prod/corp/index.html
+++ b/prod/corp/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>PORTAL ALELO - DEV - PME</title>
+    <title>PORTAL ALELO - PROD - CORP</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" media="all">
     <link rel="stylesheet" type="text/css" href="style.css" media="screen">
   </head>
@@ -14,7 +14,7 @@
             window.onload = function () {
                 var builder = new BlipChat();
               builder
-              .withAppKey('YWxlbG9kZXY6MzY5NGFhZDAtNjE4OS00YzY2LWFhOTMtYjgxY2Y2MTFiNDIz')
+              .withAppKey('YWxlbG9obWc6MTU4YTQyNzMtMmVhMi00MWY5LWJhNzAtNDI4YWE3NDg1M2Yw')
             .withButton({"color":"#000000","icon":""})
             .withCustomCommonUrl('https://alelo-a2021c1.chat.blip.ai/')
                 // .withAuth({
@@ -23,14 +23,14 @@
                 //    userPassword: 'passwrd',
                 // })
                 .withCustomMessageMetadata({
-                    channel: "PME",
+                    channel: "CORP",
                     cnpj: "67837138000110",
                     contracts: "['123456', '234567', '345678', '456789', '567890']",
                     profile: "['Financeiro', 'Decisão', 'Operação']",
                     cpf: "10159582602",
                 })
                .withAccount({
-                    fullName: "Thiago PME",
+                    fullName: "Thiago CORP",
                     email: "thiagomessias@gmail.com",
                     phoneNumber: "+5537998315250",
                     city: "Itauna"
