adicionando ambiente hmg

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <h1><a href="https://thadeutake.github.io/dev/corp/">Alelo Dev CORP</a></h1>
     <h1><a href="https://thadeutake.github.io/prod/pme/">Alelo Prod PME</a></h1>
     <h1><a href="https://thadeutake.github.io/prod/corp/">Alelo Prod CORP</a></h1>
+    <h1><a href="https://thadeutake.github.io/hmg/pme/">Alelo hmg PME</a></h1>
+    <h1><a href="https://thadeutake.github.io/hmg/corp/">Alelo hmg CORP</a></h1>
   </div>
 </body>
 
